# navigate_building

./: .gitignore  .pylintrc  10_Minutes_to_Building_a_Fully_Connected_Image_Classifier.ipynb  README.md  pandas data exploration.ipynb  plane_tut_model.json  updates.ln
logdir/run-20181108215808/: events.out.tfevents.1541714303.CRUNCHOTRON
logdir/run-20181108232815/: events.out.tfevents.1541719700.CRUNCHOTRON
logdir/run-20181108233603/: events.out.tfevents.1541720168.CRUNCHOTRON
logdir/run-20181108234453/: events.out.tfevents.1541720696.CRUNCHOTRON
logdir/run-20181108235237/: events.out.tfevents.1541721163.CRUNCHOTRON
source/: addModules.py  callGraph.py  deleteme.txt  graph.py  hellweek.txt  nodes.py  oldsamp.txt  plaque_location_pipeline.py  setup_for_project.txt  shape_detector.py  shape_driver.py  steps_taken.txt  steps_taken_linux.txt  videoCapture.py
source/DirectionHandling/: rooms.py  simple_map.py
source/ImageComprehension/: SignDetector.py  calibration_test_driver.py  contour_test.py  customErrors.py  customImage.py  dataGenerator.py  findPlaque.py  imageTest.py  (+8 more)
source/ROS/: convert-image_raw-to-images.launch  cvboost_sample.py  package.xml  ros_orders.txt  steps_taken.txt  writeImageTut.py
source/ROS/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
source/ROS/catkin_ws/devel/lib/pkgconfig/: image_subscriber.pc
source/ROS/catkin_ws/devel/share/image_subscriber/cmake/: image_subscriberConfig.cmake
source/ROS/catkin_ws/src/image_subscriber/: CMakeLists.txt  package.xml
source/ROS/catkin_ws/src/image_subscriber/scripts/: image_sub_example.py
(+90 files in other folders)
